--- a/建模流程梳理.ipynb
+++ b/建模流程梳理.ipynb
@@ -5656,13 +5656,7 @@
       "1200/1200 [==============================] - 0s 20us/step - loss: 0.6894 - val_loss: 0.9184\n",
       "Epoch 77/200\n",
       "1200/1200 [==============================] - 0s 21us/step - loss: 0.6887 - val_loss: 0.9179\n",
-      "Epoch 78/200\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 78/200\n",
       "1200/1200 [==============================] - 0s 21us/step - loss: 0.6880 - val_loss: 0.9173\n",
       "Epoch 79/200\n",
       "1200/1200 [==============================] - 0s 22us/step - loss: 0.6875 - val_loss: 0.9169\n",
@@ -6357,13 +6351,7 @@
       "750/750 [==============================] - 0s 23us/step - loss: 0.4634 - val_loss: 0.4717\n",
       "Epoch 79/200\n",
       "750/750 [==============================] - 0s 23us/step - loss: 0.4627 - val_loss: 0.4711\n",
-      "Epoch 80/200\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 80/200\n",
       "750/750 [==============================] - 0s 21us/step - loss: 0.4620 - val_loss: 0.4704\n",
       "Epoch 81/200\n",
       "750/750 [==============================] - 0s 20us/step - loss: 0.4613 - val_loss: 0.4696\n",
@@ -6817,13 +6805,7 @@
       "1200/1200 [==============================] - 0s 20us/step - loss: 0.4314 - val_loss: 0.6504\n",
       "Epoch 77/200\n",
       "1200/1200 [==============================] - 0s 20us/step - loss: 0.4310 - val_loss: 0.6500\n",
-      "Epoch 78/200\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 78/200\n",
       "1200/1200 [==============================] - 0s 19us/step - loss: 0.4306 - val_loss: 0.6496\n",
       "Epoch 79/200\n",
       "1200/1200 [==============================] - 0s 21us/step - loss: 0.4302 - val_loss: 0.6491\n",
